remove sso and api user login

--- a/app/src/main/res/layout/h_activity_home_.xml
+++ b/app/src/main/res/layout/h_activity_home_.xml
@@ -27,13 +27,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:gravity="right"
-                android:layoutDirection="rtl"
                 android:layout_alignParentEnd="true"
+                android:layoutDirection="rtl"
+                android:layout_marginEnd="50dp"
                 android:theme="@android:style/Theme.Holo"
                 app:iconifiedByDefault="true"
                 android:layout_marginTop="10dp"
-                app:queryHint="Search here" />
+                app:queryHint="Search here" >
+
+            </androidx.appcompat.widget.SearchView>
+
+
+
         </com.google.android.material.appbar.MaterialToolbar>
+
 
         <FrameLayout
             android:id="@+id/frag_con"
