--- a/app/src/main/res/layout/init_auth_sdk.xml
+++ b/app/src/main/res/layout/init_auth_sdk.xml
@@ -5,7 +5,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent">
     <LinearLayout
-
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
@@ -17,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Zoom Sdk Sample"
+            android:text="Video Call"
             android:textSize="20sp"
             android:textStyle="bold" />
 
